[gd_scene load_steps=5 format=3 uid="uid://8u3l0ftnguk7"]

[ext_resource type="Script" uid="uid://b8rsy34ek8nwj" path="res://Scene/game_over_screen.gd" id="1_butcp"]
[ext_resource type="FontFile" uid="uid://dio0vawax0t0d" path="res://Google Dino Run 911 Vers/bytebounce/ByteBounce.ttf" id="1_c2byr"]
[ext_resource type="Texture2D" uid="uid://dilbwkbt6n667" path="res://Google Dino Run 911 Vers/911.jpg" id="2_hv55m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5fnn5"]
bg_color = Color(0.0291915, 0.0712777, 0.283001, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
shadow_size = 10

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_butcp")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5fnn5")

[node name="911" type="Sprite2D" parent="PanelContainer"]
position = Vector2(639.5, 359.5)
scale = Vector2(2.79778, 2.31353)
texture = ExtResource("2_hv55m")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.266575, 0.266575, 0.266575, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.374139, 0.374139, 0.374139, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("1_c2byr")
theme_override_font_sizes/font_size = 150
text = "Game Over"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_c2byr")
theme_override_font_sizes/font_size = 100
text = "  Restart  "

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_c2byr")
theme_override_font_sizes/font_size = 100
text = "Quit"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Marks" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("1_c2byr")
theme_override_font_sizes/font_size = 70
text = "your mark: 9/11"
vertical_alignment = 1

[node name="TImeUsed" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.42015, 1, 0.848958, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("1_c2byr")
theme_override_font_sizes/font_size = 50
text = "Time used: 0"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
